Right floated element disappears when using column-count property in ol element.
Categories
(Core :: Layout: Floats, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox105 | --- | fixed |
People
(Reporter: jackson, Assigned: TYLin)
References
Details
Attachments
(2 files)
Comment 2•5 years ago
|
||
https://webcompat.com/issues/52751 might be another instance of this.
Though that would require a test case.
And chrome and firefox behaves differently here.
Updated•5 years ago
|
| Assignee | ||
Updated•4 years ago
|
| Assignee | ||
Comment 3•3 years ago
|
||
The naming of isMeasuringFeasibleContentBSize and associated log are
misleading. We can change last column's available block-size to be unconstrained
at the end of column balancing [1].
This patch shouldn't change the behavior.
| Assignee | ||
Comment 4•3 years ago
|
||
We can move a float frame into its block parent's PushedFloatsList during column
balancing when it cannot fit in the available block-size.
Later, when the column balancing algorithm reflows the last column in an
unconstrained block-size (in the very last reflow if needed [1]), we have to
reflow the line which contains the float's placeholder. The old code uses
GetPrevInFlow() || GetNextInFlow() to detect this scenario, which is
insufficient because the float's block parent might not have any continuation.
This patch uses NS_FRAME_HAS_MULTI_COLUMN_ANCESTOR bit to detect this instead.
Depends on D154859
Updated•3 years ago
|
Updated•3 years ago
|
Comment 9•3 years ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/c41e441c6050
https://hg.mozilla.org/mozilla-central/rev/30e4adcd2dbd
Description
•